# Mosquitto-CSharp

./: .gitignore  .gitmodules  Directory.Build.props  LICENSE  LICENSE.txt  Mosquitto-CSharp.sln  README.md
CMake/: CMake.Build.targets
Mosquitto-CSharp/: Client.cs  ClientAsyncUtility.cs  ClientBase.cs  ClientV5.cs  ConnectFailedException.cs  ConnectFailedReason.cs  ConnectFailedReasonV5.cs  DisconnectReasonV5.cs  Error.cs  ErrorException.cs  LogLevel.cs  Message.cs  Mosquitto-CSharp.csproj  Native.cs  Option.cs  PropertyListV5.cs  PropertyV5.cs  PublishFailedReasonV5.cs  QualityOfService.cs  ReconnectSettings.cs
Mosquitto-CSharp/Properties/: AssemblyInfo.cs  Settings.Designer.cs
Mosquitto-Tests/: ClientTests.cs  Mosquitto-Tests.csproj  packages.config
Mosquitto-Tests/Properties/: AssemblyInfo.cs
OpenSSL/: OpenSSL.Build.targets  OpenSSL.Copy.targets  OpenSSL.csproj
libmemory/: CMakeLists.txt  libmemory.Copy.targets  libmemory.csproj  native_memory.c  native_memory.h
libmosquitto/: libmosquitto.Copy.targets  libmosquitto.csproj
